--- a/packages/global/components/document.marko
+++ b/packages/global/components/document.marko
@@ -86,5 +86,6 @@ $ const {
     <if(!GAM || (GAM && !GAM.enabled))>
       <script type="module" src="https://mos-scripts.com/a/main.js"></script>
     </if>
+    <identity-x-newsletter-modal />
   </@below-container>
 </marko-web-document>
