fix closing div

--- a/packages/global/components/layouts/content/components/content-body-with-injection.marko
+++ b/packages/global/components/layouts/content/components/content-body-with-injection.marko
@@ -23,7 +23,7 @@ $ const mobileCounts = (withMobileLeaderBoard) ? [900, 1650, 2950, 4250, 5550, 6
     <if(withLeadersBlock)>
       <@inject
         at=1500
-        html='<div class="ad-container ad-container--margin-auto-x ad-container--inline-content ad-container--inline-content-desktop ad-container--template-inline-content-desktop"><mos-creative></mos-creative></div'
+        html='<div class="ad-container ad-container--margin-auto-x ad-container--inline-content ad-container--inline-content-desktop ad-container--template-inline-content-desktop"><mos-creative></mos-creative></div>'
       />
     </if>
 
