Add mediaOS unit-id=“278” & unit-id=“285” on directory templates

--- a/packages/global/components/layouts/content/media-gallery.marko
+++ b/packages/global/components/layouts/content/media-gallery.marko
@@ -21,7 +21,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -75,7 +75,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
