--- a/packages/global/components/layouts/content/product.marko
+++ b/packages/global/components/layouts/content/product.marko
@@ -21,7 +21,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -79,7 +79,7 @@ $ const sections = getAsArray(input, "sections");
             />
           </if>
           <else>
-            <mos-creative />
+            <mos-creative unit-ids="278" />
           </else>
         </else>
       </div>
@@ -96,7 +96,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
