--- a/packages/global/components/layouts/content/whitepaper.marko
+++ b/packages/global/components/layouts/content/whitepaper.marko
@@ -19,7 +19,7 @@ $ const { id, type, pageNode, ...rest } = input;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
