--- a/packages/global/components/layouts/website-section/feed.marko
+++ b/packages/global/components/layouts/website-section/feed.marko
@@ -35,7 +35,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -77,7 +77,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -107,7 +107,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -127,7 +127,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -159,7 +159,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -182,7 +182,7 @@ $ const perPage = 18;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 </global-website-section-default-layout>
