--- a/packages/global/components/layouts/website-section/products.marko
+++ b/packages/global/components/layouts/website-section/products.marko
@@ -33,7 +33,7 @@ $ const perPage = 10;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -71,7 +71,7 @@ $ const perPage = 10;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
 
         <${input.railSlotA}
@@ -89,7 +89,7 @@ $ const perPage = 10;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
 
         <if(GAM && GAM.enabled)>
@@ -101,7 +101,7 @@ $ const perPage = 10;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </div>
     </div>
@@ -117,7 +117,7 @@ $ const perPage = 10;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -145,7 +145,7 @@ $ const perPage = 10;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 </global-website-section-default-layout>
