--- a/packages/global/templates/directory/index.marko
+++ b/packages/global/templates/directory/index.marko
@@ -24,7 +24,7 @@ $ const currentPage = search.getCurrentPage();
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="285" />
     </else>
   </@section>
   <@section|{ blockName, section }|>
