--- a/packages/global/templates/magazine/issue.marko
+++ b/packages/global/templates/magazine/issue.marko
@@ -39,7 +39,7 @@ $ const perPage = 50;
             />
           </if>
           <else>
-            <mos-creative />
+            <mos-creative unit-ids="278" />
           </else>
         </@section>
           <@section>
