--- a/packages/global/templates/user/logout.marko
+++ b/packages/global/templates/user/logout.marko
@@ -22,7 +22,7 @@ $ const description = `Log out of ${config.siteName()}`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
       <@section>
@@ -40,7 +40,7 @@ $ const description = `Log out of ${config.siteName()}`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
     </marko-web-page-wrapper>
