--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -34,7 +34,7 @@ $ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "po
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
 
   </@section>
@@ -198,7 +198,7 @@ $ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "po
         />
       </if>
       <else>
-        <mos-creative />
+        <mos-creative unit-ids="278" />
       </else>
     </@section>
   </if>
