--- a/packages/global/components/layouts/website-section/home.marko
+++ b/packages/global/components/layouts/website-section/home.marko
@@ -21,7 +21,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
@@ -49,7 +49,7 @@ $ const sections = getAsArray(input, "sections");
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 </global-website-section-default-layout>
