--- a/packages/global/templates/content/contact.marko
+++ b/packages/global/templates/content/contact.marko
@@ -21,7 +21,7 @@ $ const perPage = 10;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
