--- a/packages/global/templates/dynamic-page/index.marko
+++ b/packages/global/templates/dynamic-page/index.marko
@@ -18,7 +18,7 @@ $ const { GAM } = out.global;
       />
     </if>
     <else>
-      <mos-creative />
+      <mos-creative unit-ids="278" />
     </else>
   </@section>
 
