--- a/packages/global/templates/user/authenticate.marko
+++ b/packages/global/templates/user/authenticate.marko
@@ -16,7 +16,7 @@ $ const title = "Authenticate";
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
       <@section>
