--- a/packages/global/templates/user/login.marko
+++ b/packages/global/templates/user/login.marko
@@ -22,7 +22,7 @@ $ const description = `Log in to ${config.siteName()}`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
 
@@ -41,7 +41,7 @@ $ const description = `Log in to ${config.siteName()}`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
     </marko-web-page-wrapper>
