--- a/packages/global/templates/user/profile.marko
+++ b/packages/global/templates/user/profile.marko
@@ -22,7 +22,7 @@ $ const description = `Complete your ${config.siteName()} user profile`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
       <@section>
@@ -39,7 +39,7 @@ $ const description = `Complete your ${config.siteName()} user profile`;
           />
         </if>
         <else>
-          <mos-creative />
+          <mos-creative unit-ids="278" />
         </else>
       </@section>
     </marko-web-page-wrapper>
