--- a/packages/global/templates/user/logout.marko
+++ b/packages/global/templates/user/logout.marko
@@ -1,4 +1,4 @@
-$ const { config } = out.global;
+$ const { config, GAM } = out.global;
 
 $ const type = "logout";
 $ const title = "Log out";
@@ -13,12 +13,17 @@ $ const description = `Log out of ${config.siteName()}`;
   <@page>
     <marko-web-page-wrapper>
       <@section|{ aliases }| modifiers=["first"]>
-        <theme-gam-define-display-ad
-          name="leaderboard"
-          position="static_page"
-          aliases=aliases
-          modifiers=["inter-block"]
-        />
+        <if(GAM && GAM.enabled)>
+          <theme-gam-define-display-ad
+            name="leaderboard"
+            position="static_page"
+            aliases=aliases
+            modifiers=["inter-block"]
+          />
+        </if>
+        <else>
+          <mos-creative unit-ids="278" />
+        </else>
       </@section>
       <@section>
         <h1 class="page-wrapper__title">${description}</h1>
@@ -26,12 +31,17 @@ $ const description = `Log out of ${config.siteName()}`;
       </@section>
 
       <@section|{ aliases }|>
-        <theme-gam-define-display-ad
-          name="rotation"
-          position="static_page"
-          aliases=aliases
-          modifiers=["inter-block"]
-        />
+        <if(GAM && GAM.enabled)>
+          <theme-gam-define-display-ad
+            name="rotation"
+            position="static_page"
+            aliases=aliases
+            modifiers=["inter-block"]
+          />
+        </if>
+        <else>
+          <mos-creative unit-ids="278" />
+        </else>
       </@section>
     </marko-web-page-wrapper>
   </@page>
