--- a/packages/global/templates/user/profile.marko
+++ b/packages/global/templates/user/profile.marko
@@ -1,4 +1,4 @@
-$ const { config } = out.global;
+$ const { config, GAM } = out.global;
 
 $ const type = "profile";
 $ const title = "User profile";
@@ -13,24 +13,34 @@ $ const description = `Complete your ${config.siteName()} user profile`;
   <@page>
     <marko-web-page-wrapper>
       <@section|{ aliases }| modifiers=["first"]>
-        <theme-gam-define-display-ad
-          name="leaderboard"
-          position="static_page"
-          aliases=aliases
-          modifiers=["inter-block"]
-        />
+        <if(GAM && GAM.enabled)>
+          <theme-gam-define-display-ad
+            name="leaderboard"
+            position="static_page"
+            aliases=aliases
+            modifiers=["inter-block"]
+          />
+        </if>
+        <else>
+          <mos-creative unit-ids="278" />
+        </else>
       </@section>
       <@section>
         <h1 class="page-wrapper__title">${description}</h1>
         <marko-web-identity-x-form-profile />
       </@section>
       <@section|{ aliases }|>
-        <theme-gam-define-display-ad
-          name="rotation"
-          position="static_page"
-          aliases=aliases
-          modifiers=["inter-block"]
-        />
+        <if(GAM && GAM.enabled)>
+          <theme-gam-define-display-ad
+            name="rotation"
+            position="static_page"
+            aliases=aliases
+            modifiers=["inter-block"]
+          />
+        </if>
+        <else>
+          <mos-creative unit-ids="278" />
+        </else>
       </@section>
     </marko-web-page-wrapper>
   </@page>
