Add padding to bottom ad when in the last page-wrapper__section

--- a/packages/global/scss/core.scss
+++ b/packages/global/scss/core.scss
@@ -492,4 +492,15 @@ label {
 [data-embed-type][data-embed-align="right"] {
   clear: right;
 }
+
+.page-wrapper {
+  $self: &;
+  > #{ $self }__section {
+    &:last-of-type{
+      > mos-creative {
+        margin-bottom: 60px;
+      }
+    }
+  }
+}
 /*! critical:end */
