Add comp call, config and routing logic for content metering

--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -144,7 +144,7 @@ $ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "po
           </if>
           <else-if(shouldOverlay(contentMeterState))>
             $ const body = showOverlay ? getContentPreview({ body: content.body, selector: "p:lt(7)" }) : getContentPreview({ body: content.body, selector: "p:nth-of-type(1)" });
-            <marko-web-content-body block-name=blockName modifiers=bodyModifiers obj={ body } lazyload-first-image=lazyloadFirstImage />
+            <marko-web-content-body block-name=blockName obj={ body } lazyload-first-image=false />
 
             <div class="content-page-preview-overlay" />
             <if(!showOverlay)>
