--- a/packages/global/components/document.marko
+++ b/packages/global/components/document.marko
@@ -5,6 +5,7 @@ $ const {
   req,
   nativeX,
   GAM,
+  contentMeterState,
 } = out.global;
 
 <marko-web-document ...input>
@@ -87,5 +88,14 @@ $ const {
       <script type="module" src="https://mos-scripts.com/a/main.js"></script>
     </if>
     <identity-x-newsletter-modal />
+    <if(contentMeterState && !contentMeterState.isLoggedIn)>
+      <theme-content-meter-block
+        views=contentMeterState.views
+        view-limit=contentMeterState.viewLimit
+        display-overlay=contentMeterState.displayOverlay
+        display-gate=contentMeterState.displayGate
+        dynamic-title="We hope you’ve enjoyed your articles."
+      />
+    </if>
   </@below-container>
 </marko-web-document>
